samples/_failures_safe/1761549524_736c24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c9ddca7.c: In function ‘pointcloud_centroid_distance’:
./samples/SAFE/__tmp_6c9ddca7.c:140:18: error: invalid operands to binary / (have ‘double’ and ‘struct PointCloud’)
  140 |     centroid_a.y /= a
      |     ~~~~~~~~~~~~ ^~
      |               |
      |               double
./samples/SAFE/__tmp_6c9ddca7.c:140:22: error: expected ‘;’ at end of input
  140 |     centroid_a.y /= a
      |                      ^
      |                      ;
./samples/SAFE/__tmp_6c9ddca7.c:140:5: error: expected declaration or statement at end of input
  140 |     centroid_a.y /= a
      |     ^~~~~~~~~~
